# Sample-project

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: _person_8h_source.html  annotated.html  annotated_dup.js  class_rex_1_1_person-members.html  class_rex_1_1_person.html  class_rex_1_1_person.js  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_61d1dd4283a9d129620bf55c3c9729d3.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7c62f0bf51ca5c5eb8ede9136de51988.html  dir_92063fce0b77ba4ddd957cfc006babca.html  dir_a1cbfb77eb05f51495a29d9eff06a11e.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d95e454e1abbf8adc1c63811c0795940.html  dir_fc44603e6a261f31cc1edda738d7e5a7.html  functions.html  functions_func.html  index.html  md__d__0__personal__git__repos__git_hub__sample_project__r_e_a_d_m_e.html  namespace_rex.html  namespace_rex.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html
doc/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _person_8cpp.tex  _person_8cpp_8obj_8d.tex  _person_8h.tex  _person_8h_source.tex  annotated.tex  class_rex_1_1_person.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_61d1dd4283a9d129620bf55c3c9729d3.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_7c62f0bf51ca5c5eb8ede9136de51988.tex  dir_92063fce0b77ba4ddd957cfc006babca.tex  dir_a1cbfb77eb05f51495a29d9eff06a11e.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  files.tex  main_8cpp.tex  refman.aux  (+14 more)
include/: Person.h
source/: CMakeLists.txt  Person.cpp  main.cpp
(+8 files in other folders)
